--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "framer-motion": "^6.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
