--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/stripe-js": "^1.29.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-infinite-scroll-component": "^6.1.0",
+    "react-pdf": "^5.7.2",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
-    "react-virtualized-auto-sizer": "^1.0.6",
-    "react-window": "^1.8.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
